GithubMiner: Arreglar varias cosas